--- a/package.json
+++ b/package.json
@@ -10,6 +10,6 @@
     "wdio-chromedriver-service": "^8.0.0"
   },
   "scripts": {
-    "wdio": "wdio run wdio.conf.js"
+    "test": "wdio run wdio.conf.js"
   }
 }
